# untype

./: .gitignore  LICENSE  README.en.md  README.md  RELEASE_NOTES.md  capsule.html  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml  ci.yml  deploy-site.yml
branding/: .gitignore  gen-icon.cjs
scripts/: UPDATE_SETUP.md  build-mac.sh  fetch-models.sh  gen-latest-json.sh  release-mac.sh  signing.local.env.example
site/: README.md  package-lock.json  package.json  vite.config.js
site/src/: App.jsx  index.css
site/src/components/: Hero.jsx  Labs.jsx  Testimonial.jsx  Wire.jsx
site/src/hooks/: useReveals.js
src/: app.css  app.html  index.css
src-tauri/: .env.example  .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.windows.conf.json  vocab.txt
src-tauri/capabilities/: default.json
src-tauri/dmg/: background.src.html
src-tauri/examples/: eval_asr.rs  eval_clip.rs
src-tauri/icons/: icon.icns
src-tauri/src/: activation.rs  asr.rs  audio.rs  cloud_asr.rs  inject.rs  keytap.rs  learn.rs  lib.rs  llm.rs  pipeline.rs  prefs.rs  recorder.rs  settings.rs  system_prompt.txt  vad.rs  viz.rs  vocab.rs
src/capsule/: Capsule.tsx  capsule.css  main.tsx
src/lib/: hotkey.ts  ipc.ts  platform.ts  queryClient.ts  useTauriEvent.ts  useUpdater.ts  utils.ts
src/routes/: +page.svelte
src/routes/capsule/: +page.svelte
src/settings/: App.tsx  UpdateModal.tsx  main.tsx
untype-react/: README.md  index.html  package-lock.json  package.json  vite.config.js
untype-react/src/: index.css
untype-react/src/components/: About.jsx  BrandMark.jsx  CTA.jsx  Capabilities.jsx  Footer.jsx  Hero.jsx  Method.jsx  Nav.jsx  Plate.jsx  SideRails.jsx  StarButton.jsx  Topbar.jsx  Work.jsx
untype-react/src/hooks/: useHeadroom.js
untype-react/src/lib/: asset.js  links.js  plates.js  scroll.js
