[package]
name = "tauri-app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
# 应用内自动更新：下载/安装/重启（配合前端 @tauri-apps/plugin-updater）
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-rs = "0.6.8"
hound = "3.5.1"
cpal = "0.18.1"
enigo = "0.6.1"
ureq = { version = "2", features = ["json"] }
pinyin = { version = "0.11.0", features = ["plain"] }
arboard = { version = "3.6.1", default-features = false }
macos-accessibility-client = "0.0.2"
# 云端 ASR：WebSocket 流式（火山 gzip 二进制协议 / 阿里 JSON + base64）
tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
flate2 = "1"
base64 = "0.22"
# 录音胶囊频谱波形：小 FFT 把音量拆成人声频段（见 viz.rs）
rustfft = "6"

# 单键全局热键（含单修饰键、区分左右）：macOS 用 CGEventTap 监听键盘
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"

# 桌面应用优先优化体积而非极致性能（参考 cc-switch）
[profile.release]
codegen-units = 1   # 更好的优化（牺牲编译速度）
lto = "thin"        # 链接时优化
opt-level = "s"     # 优化体积
panic = "unwind"
strip = "symbols"   # 去符号，减小体积

